<resources>
    <string name="app_name">Lovinmybag</string>
    <string name="msg_error_connection">Error in connection</string>
    <string name="msg_something_error">Something error</string>
    <string name="msg_server_error">Server error… please try again</string>
    <string name="no_internet">Please, Check your internet connection and try again</string>
    <string name="empty_error_msg">Please, Enter your</string>
    <string name="email_validation_error_msg">Email is incorrect</string>
    <string name="phone_validation_error_msg">Mobile number is incorrect</string>
    <string name="phone_or_email_validation_error_msg">Phone or mobile number is incorrect</string>
    <string name="name_validation_error_msg">Name must be complete </string>
    <string name="confirm_pass_validation_error_msg">Password didn\'t Match</string>
    <string name="pass_validation_error_msg">Password must be at least 8 Letters</string>
    <string name="login">Login</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="home">Home</string>
    <string name="sold_items">Sold Items</string>
    <string name="add_new_item">Add New Item</string>
    <string name="products">Products</string>
    <string name="profile">Profile</string>
    <string name="search">Search</string>
    <string name="customer">Customer</string>
    <string name="notifications">Notifications</string>
    <string name="setting">Setting</string>
    <string name="sales">Sales</string>
    <string name="offers">Offers</string>
</resources>
