<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.beetleware.lovinmybag.ui.fragments.profile.ProfileViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img_container"
            android:layout_width="match_parent"
            android:layout_height="@dimen/x200dp"
            android:background="@color/colorPrimaryDark" />

        <RelativeLayout
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <ImageView
                android:layout_width="@dimen/x30dp"
                android:layout_height="@dimen/x30dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_margin="@dimen/space_10"
                android:src="@drawable/ic_title_bar_logo" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginTop="@dimen/space_10"
                android:fontFamily="@font/cairo_semi_bold"
                android:text="@string/profile"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="@dimen/x18sp" />

            <ImageView
                style="@style/clickable_view_border"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_margin="@dimen/space_10"
                android:src="@drawable/ic_notifi" />

        </RelativeLayout>


        <androidx.cardview.widget.CardView
            android:id="@+id/statics_container"
            android:layout_width="match_parent"
            android:layout_height="@dimen/x150dp"
            android:layout_marginStart="@dimen/space_20"
            android:layout_marginTop="@dimen/x120dp"
            android:layout_marginEnd="@dimen/space_20"
            android:backgroundTint="@color/colorAccent"
            app:cardCornerRadius="@dimen/space_20">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/img_user"
                            android:layout_width="@dimen/space_50"
                            android:layout_height="@dimen/space_50"
                            android:layout_margin="@dimen/x10dp"
                            android:src="@drawable/ic_user" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/tv_name"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/cairo_bold"
                                android:textColor="@android:color/white"
                                tools:text="Ahmed" />

                            <TextView
                                android:id="@+id/tv_job"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/cairo_semi_bold"
                                android:text="Sales"
                                android:textColor="@android:color/white" />
                        </LinearLayout>

                    </LinearLayout>

                    <ImageView
                        style="@style/clickable_view_border"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="@dimen/space_10"
                        android:padding="@dimen/x10dp"
                        android:src="@drawable/ic_edit" />
                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/space_10"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/num_customers"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/cairo_bold"
                            android:textColor="@android:color/white"
                            tools:text="200" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/cairo_semi_bold"
                            android:text="@string/customer"
                            android:textColor="@android:color/white" />
                    </LinearLayout>

                    <View
                        android:layout_width="@dimen/space_1"
                        android:layout_height="match_parent"
                        android:layout_marginStart="@dimen/space_10"
                        android:background="@android:color/white" />


                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/space_10"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/num_of_sales"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/cairo_bold"
                            android:textColor="@android:color/white"
                            tools:text="200" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/cairo_semi_bold"
                            android:text="@string/sales"
                            android:textColor="@android:color/white" />
                    </LinearLayout>

                    <View
                        android:layout_width="@dimen/space_1"
                        android:layout_height="match_parent"
                        android:layout_marginStart="@dimen/space_10"
                        android:background="@android:color/white" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/space_10"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/num_of_offers"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/cairo_bold"
                            android:textColor="@android:color/white"
                            tools:text="200" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/cairo_semi_bold"
                            android:text="@string/offers"
                            android:textColor="@android:color/white" />
                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            style="@style/clickable_view"
            android:id="@+id/notification_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/statics_container"
            android:layout_marginStart="@dimen/space_20"
            android:layout_marginTop="@dimen/space_20"
            android:layout_marginEnd="@dimen/space_20"
            android:layout_marginBottom="@dimen/space_5"
            app:cardCornerRadius="@dimen/space_15">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:padding="@dimen/x15dp">

                <ImageView
                    android:layout_centerVertical="true"
                    android:id="@+id/img_notification"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="@dimen/x4dp"
                    android:layout_marginEnd="@dimen/x15dp"
                    android:src="@drawable/ic_notifi"
                    android:tint="@color/colorAccent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/img_notification"
                    android:text="@string/notifications" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_card_arrow"
                    android:tint="@color/colorAccent" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            style="@style/clickable_view_border"
            android:id="@+id/container_setting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/notification_container"
            android:layout_marginStart="@dimen/space_20"
            android:layout_marginTop="@dimen/space_20"
            android:layout_marginEnd="@dimen/space_20"
            android:layout_marginBottom="@dimen/space_5"
            app:cardCornerRadius="@dimen/space_15">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:padding="@dimen/x15dp">

                <ImageView
                    android:layout_centerVertical="true"
                    android:id="@+id/img_setting"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="@dimen/x4dp"
                    android:layout_marginEnd="@dimen/x15dp"
                    android:src="@drawable/ic_settings_input_component_black_24dp"
                    android:tint="@color/colorAccent" />

                <TextView
                    android:layout_centerVertical="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/img_setting"
                    android:text="@string/setting" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_card_arrow"
                    android:tint="@color/colorAccent" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            style="@style/clickable_view_border"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/container_setting"
            android:layout_marginStart="@dimen/space_20"
            android:layout_marginTop="@dimen/space_20"
            android:layout_marginEnd="@dimen/space_20"
            android:layout_marginBottom="@dimen/space_5"
            app:cardCornerRadius="@dimen/space_15">

            <RelativeLayout
                android:id="@+id/logout_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:padding="@dimen/x15dp">

                <ImageView
                    android:layout_centerVertical="true"
                    android:id="@+id/logout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="@dimen/x4dp"
                    android:layout_marginEnd="@dimen/x15dp"
                    android:src="@drawable/ic_call_missed_outgoing_black_24dp"
                    android:tint="@color/colorAccent" />

                <TextView
                    android:layout_centerVertical="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/logout"
                    android:text="Logout" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_card_arrow"
                    android:tint="@color/colorAccent" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>
        <include
            layout="@layout/progress_bar"
            app:viewModel="@{viewModel}" />

    </RelativeLayout>
</layout>
